add debug out of memory